# woody-woodpacker

./: .gitignore  CMakeLists.txt  Makefile  README.md  decrypt  decrypt.asm  disas_woody_wood_packer  payload  payload.asm  test.c  test.sh
inc/: functions.h  structure.h  woody.h
samples/: build.sh  clean.sh  disas_tiny_c  hello  hello-32.asm  hello-pie.asm  hello-relocation  hello.asm  no-std-c.c  nodata  nodata.asm  tiny_c  tiny_c.c
src/: debug_utils.c  decrypt.asm  decrypt_64.asm  decrypt_aes.asm  dynamic_segment.c  encryption.c  endian_handle.c  file_io.c  find_code_cave.c  injection.c  main.c  patch_elf.c  payload  payload.asm  payload.c  payload_64.asm  program_header.c  relocations.c  second_stage.c  section_header.c  segment.c  segment_header.c  utils.c
src/parsing/: dynamic_segment.c  segment_header.c
